Fixing pre element text wrapping.

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -168,6 +168,7 @@ pre code {
   font-size: 1.0625rem;
   margin: 0;
   padding: 0;
+  white-space: pre;
 }
 
 pre {
